--- a/build.yaml
+++ b/build.yaml
@@ -2303,8 +2303,8 @@ steps:
      export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2372,8 +2372,8 @@ steps:
      export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2441,8 +2441,8 @@ steps:
      export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2510,8 +2510,8 @@ steps:
      export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2579,8 +2579,8 @@ steps:
      export HAIL_DEFAULT_NAMESPACE={{ default_ns.name }}
      export HAIL_NETCAT_UBUNTU_IMAGE={{ netcat_ubuntu_image.image }}
      export HAIL_HAIL_BASE_IMAGE={{ hail_base_image.image }}
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export HAIL_TEST_TOKEN_FILE=/user-tokens/tokens.json
      export HAIL_TEST_DEV_TOKEN_FILE=/dev-tokens/tokens.json
      export HAIL_TOKEN="{{ token }}"
@@ -2797,8 +2797,8 @@ steps:
      export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=0
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
@@ -2849,8 +2849,8 @@ steps:
      export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=1
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
@@ -2901,8 +2901,8 @@ steps:
      export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=2
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
@@ -2953,8 +2953,8 @@ steps:
      export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=3
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
@@ -3005,8 +3005,8 @@ steps:
      export HAIL_GSA_KEY_FILE=/test-gsa-key/key.json
      export PYTEST_SPLITS=5
      export PYTEST_SPLIT_INDEX=4
-     export DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
-     export DOCKER_PREFIX="{{ global.docker_prefix }}"
+     export HAIL_DOCKER_ROOT_IMAGE="{{ global.docker_root_image }}"
+     export HAIL_DOCKER_PREFIX="{{ global.docker_prefix }}"
      export PYTHON_DILL_IMAGE="{{ global.docker_prefix }}/python-dill:3.7-slim"
      hailctl config set batch/billing_project test
      hailctl config set batch/bucket hail-test-dmk9z
