[query-service] concurrently use multiple Hail Query JAR versions
The high-level problem:

The Hail Query Service is redeployed with each commit to `main`. Each deployment has a new JAR file
whose ABI is backwards-incompatible.

The high-level solution:

Hail Batch Workers can load the JAR for a given Hail version on-demand. A fresh class loader for
each Hail version allows the classes to co-exist in the same JVM. We cache jars on the local
filesystem.

---

`javac` compiles Java files to JVM Bytecode. JVM Bytecode is normally stored in `class` files. A JAR
file is, essentially, a TAR file of a directory of class files.

`java` needs to find the `class` file that defines any Class. A `ClassLoader` defines:

1. (`findClass`) How to *find* the definition of a Class known to the current `ClassLoader`.

2. (`findResource`) How to *find* an arbitrary file known to the current `ClassLoader`.

3. (`loadClass` and `getResource`) The order in which to find a class in a set of
  `ClassLoader`s (e.g. if two `ClassLoader`s know about the same Class, which one should load the
  class?)

Every `ClassLoader` has a `parent` `ClassLoader`. The default implementation of `loadClass` and
`getResource` prefers loading classes from its parent ClassLoader before anything else. We invert
the loading order to allow multiple definitions of the same Class in the same JVM. In particular,
each instance of `LoadSelfFirstURLClassLoader` prefers to use its own definition of a Class. Each
`LoadSelfFirstURLClassLoader` instance knows about one version of the Hail JAR.

The remaining subtle issue is how to load resources. For example, `HailBuildInfo` needs to load the
build info resource file. To do so, you need an instance of a `ClassLoader` that can find the
file you want. Often times, you use `this.getClass().getClassLoader()`, which is the class loader
used to load the current class. Hail does not do this. I believe we do not do this because of issues
with how TestNG loads classes. :sigh: As a re

--- a/query/Makefile
+++ b/query/Makefile
@@ -28,9 +28,13 @@ push: build
 	docker tag query $(QUERY_IMAGE)
 	docker push $(QUERY_IMAGE)
 
+UPLOAD_QUERY_JAR_TOKEN := $(shell cat /dev/urandom | LC_ALL=C tr -dc 'a-z0-9' | head -c 12)
+HAIL_REVISION := $(shell git rev-parse HEAD)
+
 .PHONY: deploy
 deploy: push
 	! [ -z $(NAMESPACE) ]  # call this like: make deploy NAMESPACE=default
 	kubectl -n $(NAMESPACE) apply -f service-account.yaml
-	python3 ../ci/jinja2_render.py '{"code":{"sha":"$(shell git rev-parse --short=12 HEAD)"},"deploy":$(DEPLOY),"default_ns":{"name":"$(NAMESPACE)"},"query_image":{"image":"$(QUERY_IMAGE)"},"global":{"project":"$(PROJECT)","domain":"$(DOMAIN)"}}' deployment.yaml deployment.yaml.out
+	gsutil cp ./hail.jar gs://hail-test-dmk9z/$(UPLOAD_QUERY_JAR_TOKEN)/jars/$(HAIL_REVISION).jar
+	python3 ../ci/jinja2_render.py '{"code":{"sha":"$(shell git rev-parse --short=12 HEAD)"},"deploy":$(DEPLOY),"default_ns":{"name":"$(NAMESPACE)"},"query_image":{"image":"$(QUERY_IMAGE)"},"global":{"project":"$(PROJECT)","domain":"$(DOMAIN)"},"upload_query_jar":{"token":"$(UPLOAD_QUERY_JAR_TOKEN)"}}' deployment.yaml deployment.yaml.out
 	kubectl -n $(NAMESPACE) apply -f deployment.yaml.out
