--- a/notebook/nginx.conf
+++ b/notebook/nginx.conf
@@ -61,9 +61,9 @@ http {
       location = /auth {
           internal;
 {% if deploy %}
-          proxy_pass http://notebook.local:5000/auth/$notebook_token;
+          proxy_pass https://notebook.local:5000/auth/$notebook_token;
 {% else %}
-          proxy_pass http://notebook.local:5000/{{ default_ns.name }}/notebook/auth/$notebook_token;
+          proxy_pass https://notebook.local:5000/{{ default_ns.name }}/notebook/auth/$notebook_token;
 {% endif %}
       }
 
@@ -76,7 +76,7 @@ http {
           auth_request /auth;
           auth_request_set $auth_pod_ip $upstream_http_pod_ip;
 
-          proxy_pass http://$auth_pod_ip$request_uri;
+          proxy_pass https://$auth_pod_ip$request_uri;
 
           include /etc/nginx/proxy.conf;
           proxy_http_version 1.1;
@@ -101,7 +101,7 @@ http {
       }
 
       location / {
-          proxy_pass http://notebook.local:5000;
+          proxy_pass https://notebook.local:5000;
 
           # don't set Host, notebook dispatches off domain
           proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
@@ -129,9 +129,9 @@ http {
       location = /auth {
           internal;
 {% if deploy %}
-          proxy_pass http://workshop.local:5000/auth/$notebook_token;
+          proxy_pass https://workshop.local:5000/auth/$notebook_token;
 {% else %}
-          proxy_pass http://workshop.local:5000/{{ default_ns.name }}/workshop/auth/$notebook_token;
+          proxy_pass https://workshop.local:5000/{{ default_ns.name }}/workshop/auth/$notebook_token;
 {% endif %}
       }
 
@@ -144,7 +144,7 @@ http {
           auth_request /auth;
           auth_request_set $auth_pod_ip $upstream_http_pod_ip;
 
-          proxy_pass http://$auth_pod_ip$request_uri;
+          proxy_pass https://$auth_pod_ip$request_uri;
 
           include /etc/nginx/proxy.conf;
           proxy_http_version 1.1;
@@ -169,7 +169,7 @@ http {
       }
 
       location / {
-          proxy_pass http://workshop.local:5000;
+          proxy_pass https://workshop.local:5000;
 
           # don't set Host, notebook dispatches off domain
           proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
